debuged the registeration and login problem