@@ -23,6 +23,7 @@
 	<!-- ==================== JAVA VERSION ==================== -->
 	<properties>
 		<java.version>21</java.version>
+		<maven.compiler.release></maven.compiler.release>
 	</properties>
 
 	<dependencies>
@@ -88,6 +89,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+		<!-- Thymeleaf for email templates -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
 		<!-- JWT API — interface for creating/reading tokens -->
@@ -203,7 +210,6 @@
                         </path>
                     </annotationProcessorPaths>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
                         <arg>-Xlint:-processing</arg>
                     </compilerArgs>
                 </configuration>
